--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 
 .aboutUs {
   margin: 50px auto;
-  max-width: 800px; /* Metnin genişliğini sınırlamak için */
+  max-width: 800px;
   line-height: 1.6;
   color: #333;
   font-family: Arial, sans-serif;
@@ -91,19 +91,23 @@ body {
 
 .aboutUs h2 {
   font-size: 24px;
-  color: #006400; /* Başlık rengi */
+  color: #006400;
   text-align: center;
   margin: 20px 0;
-  border-bottom: 2px solid #8b0000; /* Başlığın altında çizgi */
+  border-bottom: 2px solid #8b0000;
   padding-bottom: 10px;
 }
 
 .aboutUs p {
   font-size: 16px;
-  text-align: justify; /* Paragrafları iki yana yasla */
+  text-align: justify;
   margin-bottom: 20px;
   padding: 10px;
-  background-color: #f9f9f9; /* Hafif gri arka plan */
+  background-color: #f9f9f9;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Hafif gölge efekti */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.highlight {
+  font-weight: bold;
+  font-size: 1em;
 }
